--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,6 +5,12 @@
 {% block body %}
     <h1>Article index</h1>
 
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     <table class="table">
         <thead>
             <tr>
@@ -25,6 +31,10 @@
                 <td>
                     <a href="{{ path('app_article_show', {'id': article.id}) }}">show</a>
                     <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+                    <form method="post" action="{{ path('app_article_delete', {'id': article.id}) }}" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this article?');">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.id) }}">
+                        <button class="btn btn-danger btn-sm">delete</button>
+                    </form>
                 </td>
             </tr>
         {% else %}
