--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,12 @@
         {% endblock %}
     </head>
     <body>
+        <nav style="padding: 1rem; background-color: #f5f5f5;">
+            <a href="{{ path('app_profile_edit') }}" style="margin-right: 1rem;">👤 Mon profil</a>
+            <a href="{{ path('app_notifications') }}">🔔 Notifications</a>
+            <a href="{{ path('app_login') }}" style="margin-left: 1rem;">🔐 Se connecter</a>
+            <a href="{{ path('app_logout') }}" style="margin-left: 1rem;">🚪 Se déconnecter</a>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
